[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volforecast"
version = "0.1.0"
description = "Research-grade volatility forecasting library with modular experts, online aggregation, and academically grounded evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VolForecast Contributors"},
]
keywords = ["volatility", "forecasting", "realized-variance", "GARCH", "HAR", "online-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "pandas>=2.0",
    "arch>=6.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.0"]
ml = ["torch>=2.0", "lightning>=2.0"]
cpp = ["pybind11>=2.11", "cmake>=3.20"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "hypothesis>=6.80", "ruff>=0.1"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=1.3", "nbsphinx>=0.9"]
all = ["volforecast[rl,ml,cpp,dev,docs]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["volforecast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
